--- a/src/components/Meals/AvailableMeals.module.css
+++ b/src/components/Meals/AvailableMeals.module.css
@@ -11,6 +11,16 @@
   padding: 0;
 }
 
+.mealsLoading {
+  margin-top: 1rem;
+  text-align: center;
+}
+
+.mealsError {
+  text-align: center;
+  color: red;
+}
+
 @keyframes meals-appear {
   from {
     opacity: 0;
